--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,17 @@
 [tool.poetry]
 name = "print-dict"
-version = "0.1.3"
+version = "0.1.4"
 description = ""
 authors = ["Eyal Levin <eyalev@gmail.com>"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+print-dict = "print_dict.cli:cli"
+
 [tool.poetry.dependencies]
 python = "^3.6"
 yapf = "^0.30.0"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
