--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ yapf = "^0.30.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+numpy = "1.19.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
